# knotes

./: Cargo.toml  Rocket.toml  docker-compose.yml
migrations/2019-02-18-021059_users/: up.sql
migrations/2019-02-19-015225_create_notes/: up.sql
src/: access_token.rs  cors.rs  main.rs  schema.rs
src/models/: note.rs  user.rs
