[package]
name = "knotes-api"
version = "0.1.0"
authors = ["akonwi <akonwi@gmail.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.2.1"
diesel = { version = "1.0.0", features = ["mysql"] }
jsonwebtoken = "5.0.1"
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.8.0"
validator_derive = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["diesel_mysql_pool"]
